Bug 1839005 - Add missing findbar in multimessageview and webbrowser in 3pane. r=freaktechnik,aleca
**How To Test**
- Open thunderbird. Use your find function and ensure findbar shows up and works.
- Switch to a multimessageview. Use your find function and ensure findbar shows up and works.
- Switch between message view and multimessageview to ensure that find bar is not overlapping or confusing browsers.

Differential Revision: https://phabricator.services.mozilla.com/D203217

--HG--
extra : moz-landing-system : lando

--- a/mail/themes/shared/mail/about3Pane.css
+++ b/mail/themes/shared/mail/about3Pane.css
@@ -184,6 +184,7 @@ body {
   min-width: 300px;
   overflow: auto;
   display: flex;
+  flex-direction: column;
 }
 
 #accountCentralBrowser {
